# sysml-blocks

./: .gitignore  Dockerfile  README.md  docker-compose.yml
examples/: Definitions.sysml  DroneSystem.sysml  Requirements.sysml
server/: Cargo.toml
server/src/: export.rs  lexer.rs  main.rs  model.rs  parser.rs  pdf.rs
web/: package-lock.json  package.json  tsconfig.json
web/src/: index.html  main.ts  style.css
