[package]
name = "sysml-blocks-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Scratch-style visual editor server for SysML v2 textual models"
license = "MIT"

[dependencies]
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 2
